Mon Feb 28 13:18:53 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/make_release.py:
          Reverted the change tagged as
          'Thu Oct 28 11:40:01 UTC 2010  Vladimir Zykov'.

Mon Feb 28 09:21:21 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Do not define __ACE_INLINE__

Sun Feb 27 08:50:14 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux.GNU:
          Use option "-pthread" instead of setting _REENTRANT macro.

Sat Feb 26 07:31:41 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Added missing DCCFLAGS and OCCFLAGS.

Sat Feb 26 07:24:33 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU:
        * include/makeinclude/platform_netbsd.GNU:
        * include/makeinclude/platform_openbsd.GNU:
          Added missing DCCFLAGS and OCCFLAGS.

Fri Feb 25 12:19:58 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/config-lite.h: Adjust the __SUNPRO_CC version checks to include
          Sun Studio 12.2. Thanks to Henk Jan Priester <hjpriester@gmail.com>
          for this fix.

        * THANKS: Added Henk Jan Priester to the thank-you list.

Wed Feb 23 10:24:02 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Connector.cpp:
          Changed initialization of ACE_Strategy_Connector so that its
          CREATION_STRATEGY and its base class ACE_Connector use reactor
          provided by user instead of the default one returned by
          ACE_Reactor::instance().

Wed Feb 23 10:23:36 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:
          Removed unneeded options. Minor cleanups.

Wed Feb 23 08:20:01 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_netbsd.GNU:
          Cleanup.

Wed Feb 23 08:12:47 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU: