@@ -2,7 +2,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>ACE+TAO+CIAO Doxygen Documentation</title>
+    <title>ACE+TAO+CIAO+DAnCE Doxygen Documentation</title>
     <LINK href="doxygen.css" rel="stylesheet" type="text/css">
   </head>
 
