@@ -5,13 +5,13 @@
 <!-- $Id$ -->
 
 <head>
-  <title>ACE+TAO+CIAO Documentation</title>
+  <title>ACE+TAO+CIAO+DAnCE Documentation</title>
   <link href="doxygen.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <center>
-    <h1>ACE+TAO+CIAO Documentation</h1>
+    <h1>ACE+TAO+CIAO+DAnCE Documentation</h1>
   </center>
 
   <p>Documentation is separated by components:</p>
